--- a/style.css
+++ b/style.css
@@ -1,7 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Playpen+Sans&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Gabarito&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@800&display=swap');
+@font-face {
+    font-family: 'defFnt';
+    src: url('fonts/PlaypenSans-VariableFont_wght.ttf');
+}
+
+@font-face {
+    font-family: 'headgFnt';
+    src: url('fonts/Gabarito-VariableFont_wght.ttf');
+}
+
+@font-face {
+    font-family: 'ansFnt';
+    src: url('fonts/JosefinSans-VariableFont_wght.ttf');
+}
 
 body {
     padding: 0;
@@ -32,12 +42,12 @@ h1 {
     letter-spacing: 2px;
     margin: 0;
     color: white;
-    font-family: 'Gabarito', sans-serif;
+    font-family: 'headgFnt', sans-serif;
     font-size: 28px;
 }
 
 p {
-    font-family: 'Playpen Sans', cursive, sans-serif;
+    font-family: 'defFnt', sans-serif;
     color: rgb(176, 167, 167);
 }
 
@@ -59,6 +69,7 @@ p {
 }
 
 #butn {
+    letter-spacing: 0.5px;
     border: none;
     height: 55px;
     width: 100%;
@@ -66,9 +77,8 @@ p {
     border-radius: 7px;
     color: black;
     font-size: 22px;
-    font-weight: 900;
     font-weight: bold;
-    font-family: 'Nunito', sans-serif;
+    font-family: 'headgFnt', sans-serif;
     pointer-events: none;
     cursor: pointer;
     opacity: 0.7;
@@ -84,7 +94,8 @@ p {
 #answer {
     display: none;
     text-align: center;
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'ansFnt', sans-serif;
+    font-weight: 500;
     font-size: larger;
     margin: 30px 0 0 0;
     color: rgb(30, 241, 58);
@@ -116,17 +127,10 @@ p {
     }
 
     h1 {
-        letter-spacing: 2px;
-        margin: 0;
-        color: white;
-        font-family: 'Gabarito', sans-serif;
         font-size: 25px;
     }
 
     #answer {
-        display: none;
-        text-align: center;
-        font-family: 'Josefin Sans', sans-serif;
         font-size: large;
     }
 }
