--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 body {
     padding: 0;
     margin: 0;
-    background-image: url('https://t3.ftcdn.net/jpg/01/02/48/36/360_F_102483600_JGhPmhrAfzEeWIib532EtIqAcvRCYaMi.jpg');
+    background-image: url('body_bg.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
